cmake_minimum_required(VERSION 3.26)
project(Arrays)

set(CMAKE_CXX_STANDARD 17)

add_executable(Arrays main.cpp
        q1.cpp
        q2.cpp
        q3.cpp
        q4.cpp
        q5.cpp
        q6.cpp
        q7.cpp
        q8.cpp
        q9.cpp
        q10.cpp
        q11.cpp
        q12.cpp
        q13.cpp
        q14.cpp
        q15.cpp
        q16.cpp
        q17.cpp
        q18.cpp
        q19.cpp
        q20.cpp
        q21.cpp
        q22.cpp
        q23.cpp
        q24.cpp
        q25.cpp
        q26.cpp
        q27.cpp
        q28.cpp
        q29.cpp
        q32.cpp
        q30.cpp
        q31.cpp
        q33.cpp
        q34.cpp
        q35.cpp
        q36.cpp
        q37.cpp
        q38.cpp
        39.cpp
        q40.cpp
        q41.cpp
        q42.cpp
        q43.cpp
        q44.cpp
        q45.cpp
        q46.cpp
        q47.cpp
        q48.cpp
        q49.cpp
        q50.cpp
        q51.cpp
        q52.cpp
        q48_5.cpp)
